Add automatic zombie cleanup to systemd service
The daemon service now automatically kills any old/zombie vpn-unlimited-daemon
processes before starting. This prevents zombie accumulation from failed
WireGuard connection attempts.

Uses ExecStartPre with:
- '-' prefix to ignore failures
- 'pkill -f' to match full process name
- '|| true' as extra safety

This runs automatically on:
- System boot
- Service restart
- Manual service start

Users no longer need to manually clean zombies.

--- a/vpn-unlimited-daemon.service
+++ b/vpn-unlimited-daemon.service
@@ -4,6 +4,9 @@ After=network.target
 
 [Service]
 Type=simple
+# Kill any zombie/old daemon processes before starting
+# This prevents zombie process accumulation from failed WireGuard connections
+ExecStartPre=-/bin/sh -c '/usr/bin/pkill -9 -f vpn-unlimited-daemon || true'
 ExecStart=/usr/bin/vpn-unlimited-daemon
 Restart=on-failure
 RestartSec=5
